feat: Beginning implementation of topics in a Hiperlink